--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 #graph { text-align:center;}
 #answers { text-align: left; }
 #answers div { display: none; }
-input[type=submit] { visibility: hidden;}
+input[type=submit] { visibility: hidden; position: absolute; }
 #reset { float:right;}
 form{ margin:0;}
 #skip { float: right; color: #555; text-decoration: none}
@@ -47,23 +47,21 @@ h1 {
 	font-size: 15px;
 	background-color: #eee;
 	padding: 10px;
-}
+  margin:0;
 }
 
-h2, h3 {
+h2 {
+  font-size: 24px;
+  margin: 10px 0px;
+  font-weight: normal;
+}
+
+h3 {
 	/*text-align: center;*/
-	font-size: 24px;
-	max-width: 600px;
-	margin:auto;
+	font-size: 18px;
+  margin: 10px 0px;
+  font-weight: normal;
 }
-
-/*h3 {
-   color: #666; 
-   font-size: 13px;
-   text-align: left;
-   margin:0;
-   /*padding-left: 10px;*/
-/*}*/
 
 
 
@@ -73,8 +71,8 @@ h2, h3 {
   width: 396px;
   height: 30px;
   padding: 8px 12px;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 15px;
+  /*line-height: 30px;*/
   border: 2px solid #ccc;
   -webkit-border-radius: 8px;
      -moz-border-radius: 8px;
