--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,9 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 30px;
   margin: 10px 0px;
-  font-weight: normal;
+  /*font-weight: normal;*/
 }
 
 h3 {
@@ -63,8 +63,13 @@ h3 {
   font-weight: normal;
 }
 
-
-
+h4 {
+margin: 0;
+margin-top: -15px;
+font-variant: small-caps;
+color: #999;
+font-size: 14px;
+}
 .fbtypeahead,
 .tt-query,
 .tt-hint {
