--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.page { display: none; padding: 10px;}
+.page { display: none; padding: 6px 22px; }
 #game { max-width: 400; margin: 5px 10px ; padding: 10px; background: #ddd; border-radius: 5px; float: left; }
 #summary { max-width: 400; margin: 5px 10px ; padding: 10px; background: #ddd; border-radius: 5px; float: left; font-size: 12px; }
 #summary p { margin: 5px; }
