--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,25 @@
-.fbtablist b {
-  padding: 4px;
-  border-radius: 5px;
-  background: #ccc;
-  margin: 2px 5px;
+.taglist b {
+  padding: 3px 6px;
+  border-radius: 3px;
+  background: #838282;
+  margin-right: 10px;
+  color:white;
+  text-shadow: black 0px 0px 1px;
+  font-weight: normal;
+  font-size: 14px;
+  box-shadow: black 0px 0px 5px;
+  cursor: pointer;
 }
-.fbtablist b.selected { background: #ccf; }
+.taglist b:hover {
+  background: #a3a2a2;
+}
+.taglist b.selected { background: #006383; }
 
+
+#link h3, #user h3 {
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
 
 .page { display: none; padding: 6px 22px; }
 #game { max-width: 400; margin: 5px 10px ; padding: 10px; background: #ddd; border-radius: 5px; float: left; }
@@ -52,9 +66,9 @@ body {
 }
 
 h1 {
-	color: #999;
+	color: #ccc;
 	font-size: 15px;
-	background-color: #eee;
+	background-color: #474747;
 	padding: 10px;
   margin:0;
 }
@@ -76,7 +90,7 @@ h4 {
 margin: 0;
 margin-top: -15px;
 font-variant: small-caps;
-color: #999;
+color: #6F6F6F;
 font-size: 14px;
 }
 
@@ -99,9 +113,9 @@ font-size: 14px;
   outline: none;
 }
 
-.tablist .fbtypeahead,
-.tablist .tt-query,
-.tablist .tt-hint {
+.taglist .fbtypeahead,
+.taglist .tt-query,
+.taglist .tt-hint {
   width: 150px;
 }
 
